# mcp-broker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  run-tests  settings.example.yaml  start
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  claude-code-review.yml  claude-review.yml  claude.yml  notify-ops-deploy.yml  security-review.yml
scripts/: connect.py
sidecars/_template/: .env.example  README.md  adapter.example.py  docker-compose.yml
sidecars/bigquery-toolbox/: docker-compose.yml  tools.yaml
sidecars/workspace-mcp/: .env.example  README.md  docker-compose.yml
src/broker/: __main__.py  config.py  main.py
src/broker/api/: admin.py  oauth_server.py  wellknown.py
src/broker/connectors/: base.py  native.py  registry.py
src/broker/middleware/: auth.py
src/broker/models/: connection.py  connector_config.py  inbound_auth.py
src/broker/services/: api_key_store.py  auth_store_interfaces.py  client_registry.py  discovery.py  firestore_broker_key_store.py  firestore_client.py  firestore_connect_token_store.py  firestore_dcr_rate_limiter.py  firestore_inbound_auth_store.py  firestore_outbound_state_store.py  firestore_token_store.py  inbound_auth_store.py  inbound_oauth_helpers.py  oauth.py  proxy.py  sqlite_api_key_store.py  store.py
src/connectors/_template/: README.md
src/connectors/bigquery/: SETUP.md  adapter.py
tests/: firestore_backend.py  test_broker.py  test_connect_show_config.py  test_connector_discovery.py  test_firestore_broker_key_store.py  test_firestore_client.py  test_firestore_connect_token_store.py  test_firestore_dcr_rate_limiter.py  test_firestore_inbound_auth_store.py  test_firestore_oauth_state_injection.py  test_firestore_outbound_state_store.py  test_firestore_token_store.py  test_inbound_auth_models.py  test_inbound_oauth_helpers.py  test_linkedin_connector.py  test_managed_key.py  test_middleware_bearer.py  test_notion_api_connector.py  test_notion_connector.py  test_oauth_endpoints.py  test_outbound_state_binding.py  test_per_app_auth.py  test_provider_metadata.py  test_quickbooks_connector.py  test_reddit_connector.py  test_security_fix.py  test_slack_connector.py  test_sqlite_inbound_auth_store.py  test_static_auth_connector.py  test_store_config.py  test_twitter_connector.py  test_wellknown.py
(+32 files in other folders)
